<?xml version="1.0.0.2"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pavo2s_ros</name>
  <version>2.2.1</version>
  <description>Pavo2s ROS2 Drvier</description>
  <maintainer email="guoqiang@siminics.com">ln</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
 <depend>boost</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
